--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "emulator": "emulator -avd saas-app-emulator"
   },
   "dependencies": {
     "react": "18.3.1",
