--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -37,3 +37,8 @@ newArchEnabled=true
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+SIGN_ANDROID_STORE_FILE=keystore.jks
+SIGN_ANDROID_KEY_ALIAS=__SIGN_ANDROID_KEY_ALIAS
+SIGN_ANDROID_STORE_PASSWORD=__SIGN_ANDROID_KEY_ALIAS
+SIGN_ANDROID_KEY_PASSWORD=__SIGN_ANDROID_KEY_PASSWORD
