--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,10 +93,10 @@ android {
             keyPassword 'android'
         }
         release {
-            storeFile file(SIGN_ANDROID_UPLOAD_STORE_FILE)
-            storePassword SIGN_ANDROID_UPLOAD_STORE_PASSWORD
-            keyAlias SIGN_ANDROID_UPLOAD_KEY_ALIAS
-            keyPassword SIGN_ANDROID_UPLOAD_KEY_PASSWORD
+            storeFile file(SIGN_ANDROID_STORE_FILE)
+            storePassword SIGN_ANDROID_STORE_PASSWORD
+            keyAlias SIGN_ANDROID_KEY_ALIAS
+            keyPassword SIGN_ANDROID_KEY_PASSWORD
         }
     }
     buildTypes {
